--- a/privacy-engineer.html
+++ b/privacy-engineer.html
@@ -162,7 +162,7 @@ experience?...</p>
 <p><span class="badge badge-light">Philadelphia, Pennsylvania</span></p>
 <p>Posted on: 2019-09-18</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=opkdafwQ&__jvst=Employee+Referral&__jvsd=sP4ZmfwY&__jvsc=Twitter&bid=nFJiJLwF'>ServiceNow Careers - Privacy Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=opkdafwQ&__jvst=Employee+Referral&__jvsd=sP4ZmfwY&__jvsc=Twitter&bid=nFJiJLwF'>ServiceNow Careers - Privacy Analyst</a></h5> 
 <p><span class="badge badge-light">Santa Clara, California  Santa Clara, CA</span></p>
 <p>Posted on:: 2019-09-18</p>
 <hr/>
@@ -178,7 +178,7 @@ experience?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-12</p>
 <hr/>
-<h5><a href='https://validity.applytojob.com/apply/VGJCn12zXy/Privacy-Specialist'>Privacy Specialist - Validity - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://validity.applytojob.com/apply/VGJCn12zXy/Privacy-Specialist'>Privacy Specialist - Validity - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Sep 2, 2019 ... About the Company. Validity is a leading provider of data integrity and 
 compliance solutions that tens of thousands of organizations worldwide rely on to 
@@ -206,7 +206,7 @@ trust?...</p>
 <p><span class="badge badge-light">San Francisco Mountain View</span></p>
 <p>Posted on: 2019-09-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/mozilla/jobs/1826563'>Job Application for Sr. Differential Privacy Research Engineer at Mozilla</a></h5> 
+<h5><a href='https://boards.greenhouse.io/mozilla/jobs/1826563'>Job Application for Sr. Differential Privacy Research Engineer at Mozilla</a></h5> 
 <p><span class="badge badge-light">Mountain View, CA Sugar Land, TX</span></p>
 <p>Posted on: 2019-09-05</p>
 <hr/>
@@ -326,7 +326,7 @@ and data protection risks in connection with Everlaw's products, services, and?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-14</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/medmen/jobs/4290273002'>Job Application for Privacy Engineer at MedMen</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/medmen/jobs/4290273002'>Job Application for Privacy Engineer at MedMen</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-13</p>
 <hr/>
@@ -374,7 +374,7 @@ Prime's privacy program, working closely with privacy team members as well as?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-05-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://eygbl.referrals.selectminds.com/jobs/global-privacy-counsel-supervising-associate-80841'>Global Privacy Counsel Supervising Associate - EY Careers</a></h5> 
+<h5><a href='https://eygbl.referrals.selectminds.com/jobs/global-privacy-counsel-supervising-associate-80841'>Global Privacy Counsel Supervising Associate - EY Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Apr 28, 2019 ... Blockchain Cryptographic Research Scientist (London/Paris). Global Services. 
 Core Business Services. Requisition #: GLO000QQ. Knowledge Manager?...</p>
@@ -393,7 +393,7 @@ Core Business Services. Requisition #: GLO000QQ. Knowledge Manager?...</p>
 industry, with a career where you will have the opportunity to collaborate and 
 affect?...</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/sumologic/jobs/1671975'>Job Application for Security, Compliance and Privacy Analyst at Sumo Logic</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/sumologic/jobs/1671975'>Job Application for Security, Compliance and Privacy Analyst at Sumo Logic</a></h5> 
 <p><span class="badge badge-light">Denver</span></p>
 <p>Posted on: 2019-05-02</p>
 <hr/>
@@ -446,7 +446,7 @@ affect?...</p>
 <p>Apr 18, 2019 ... Description. The Company. RingCentral, Inc. (NYSE:RNG) is a leading provider 
 of global enterprise cloud communications and collaboration solutions.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
+
 
 <!--End body here -->
 
