--- a/ui.html
+++ b/ui.html
@@ -40,6 +40,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.smartrecruiters.com/lmgroup/743999698363335-ux-ui-designer'>lm group UX/UI Designer | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Chiasso, Switzerland</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
 <h5><a href='https://careers.jobscore.com/careers/radiantdigital/jobs/ui-developer-c5BjXi-Ayr6AP8aKiznY58'>UI Developer #0671 job at Radiant Digital in Temple Terrace, FL, powered by JobScore</a></h5> 
 <p><span class="badge badge-light">Temple Terrace, FLTemple Terrace, FL Tampa, FL</span></p>
 <p>Posted on: 2019-10-29</p>
@@ -72,7 +76,7 @@
 <p><span class="badge badge-light">London London  London</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://holycodedoo.applytojob.com/apply/tPf1i9A4j0/Mobile-UXUI-Designer-Smallpdf-Team'>Mobile UX/UI designer - Smallpdf team - Holycode - Career Page</a></h5> 
+<h5><a href='http://holycodedoo.applytojob.com/apply/tPf1i9A4j0/Mobile-UXUI-Designer-Smallpdf-Team'>Mobile UX/UI designer - Smallpdf team - Holycode - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -138,7 +142,7 @@
 <p><span class="badge badge-light">Berlin Berlin</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.elcamino.edu/student/studentservices/health/substance-abuse-dui-awareness.aspx'>Substance Abuse &amp; DUI Awareness Fair</a></h5> 
+<h5><a href='https://www.elcamino.edu/student/studentservices/health/substance-abuse-dui-awareness.aspx'>Substance Abuse &amp; DUI Awareness Fair</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -162,7 +166,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://authenticjobs.com/jobs/31691?r=rss2'>Authentic Jobs UX/UI Designer at Modea</a></h5> 
+<h5><a href='https://authenticjobs.com/jobs/31691?r=rss2'>Authentic Jobs UX/UI Designer at Modea</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -341,7 +345,7 @@ Senior UI Engineer at Toggle in Greater London | React jobs | 42jobs.io
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jobs.theguardian.com/job/6979308/recruitment-manager/?TrackID=12'>Recruitment Manager job with BIS RECRUIT | Guardian Jobs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.theguardian.com/job/6979308/recruitment-manager/?TrackID=12'>Recruitment Manager job with BIS RECRUIT | Guardian Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
@@ -361,7 +365,7 @@ Senior UI Engineer at Toggle in Greater London | React jobs | 42jobs.io
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/sumup/jobs/4494787002'>Job Application for Product Designer - UX/UI at SumUp</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/sumup/jobs/4494787002'>Job Application for Product Designer - UX/UI at SumUp</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -387,7 +391,7 @@ Senior UI Engineer at Toggle in Greater London | React jobs | 42jobs.io
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Tradelab/743999698217669-talent-acquisition-manager-m-w-'>Tradelab TALENT ACQUISITION MANAGER (M/W) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Tradelab/743999698217669-talent-acquisition-manager-m-w-'>Tradelab TALENT ACQUISITION MANAGER (M/W) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France  Paris Berlin Milan Madrid Sao Paulo</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -460,10 +464,6 @@ Senior UI Engineer at Toggle in Greater London | React jobs | 42jobs.io
 <p>Posted on: 2019-10-26</p>
 <hr/>
 <h5><a href='https://uiowa.referrals.selectminds.com/jobs/phlebotomy-technician-ii-pediatric-specialty-clinic-location-5591'>Phlebotomy Technician II - Pediatric Specialty Clinic Location - Jobs@UIOWA Careers</a></h5> 
-<p><span class="badge badge-light">United States</span></p>
-<p>Posted on: 2019-10-26</p>
-<hr/>
-<h5><a href='https://uiowa.referrals.selectminds.com/jobs/medical-assistant-ii-holden-comprehensive-cance-center-clinic-5583'>Medical Assistant II- Holden Comprehensive Cance Center Clinic - Jobs@UIOWA Careers</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
