--- a/biostatistics.html
+++ b/biostatistics.html
@@ -77,7 +77,7 @@
 <p><span class="badge badge-light">Cambridge, MA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Biogen/743999698271162-statistical-programmer'>Biogen Statistical Programmer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Biogen/743999698271162-statistical-programmer'>Biogen Statistical Programmer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -91,7 +91,7 @@ Remote Principal/Sr. Principal Biostatistician in Durham, from NeedLS, by Lori S
 <p><span class="badge badge-light">Cambridge, MA</span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=oQzfbfwz&__jvst=Employee+Referral&__jvsd=ssyfAhwB&__jvsc=Twitter&bid=n3KKhMw5'>Premier Research Careers - Biostatistical Programmer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=oQzfbfwz&__jvst=Employee+Referral&__jvsd=ssyfAhwB&__jvsc=Twitter&bid=n3KKhMw5'>Premier Research Careers - Biostatistical Programmer</a></h5> 
 <p><span class="badge badge-light">North Carolina</span></p>
 <p>Posted on:: 2019-10-23</p>
 <hr/>
@@ -126,7 +126,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://engineering.oregonstate.edu/bioengineering'>
+<h5><a href='https://engineering.oregonstate.edu/bioengineering'>
     Bioengineering Graduate Programs | College of Engineering | Oregon State University  </a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-10</p>
@@ -139,7 +139,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">San Diego, California United States</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=obqM9fwg&__jvst=Employee+Referral&__jvsd=ssyfAhwB&__jvsc=Twitter&bid=najQ0MwA'>Premier Research Careers - Senior Biostatistician</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=obqM9fwg&__jvst=Employee+Referral&__jvsd=ssyfAhwB&__jvsc=Twitter&bid=najQ0MwA'>Premier Research Careers - Senior Biostatistician</a></h5> 
 <p><span class="badge badge-light">Madrid, Spain</span></p>
 <p>Posted on:: 2019-10-05</p>
 <hr/>
@@ -189,7 +189,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">North America United States  North America United States  North America United States  North America United States</span></p>
 <p>Posted on: 2019-09-30</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/myovantsciences42/jobs/4441972002'>Job Application for Senior Biostatistician/Manager, Biostatistics at Myovant Sciences</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/myovantsciences42/jobs/4441972002'>Job Application for Senior Biostatistician/Manager, Biostatistics at Myovant Sciences</a></h5> 
 <p><span class="badge badge-light">Brisbane</span></p>
 <p>Posted on: 2019-09-26</p>
 <hr/>
@@ -205,17 +205,17 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on:: 2019-09-23</p>
 <hr/>
-<h5><a href='https://chroniclevitae.com/jobs/0000504302-01'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://chroniclevitae.com/jobs/0000504302-01'>
 	Chair and Full Professor - Department of Epidemiology/Biostatistics | ChronicleVitae
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-09-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/vir/db3fe4bb-4c9d-4ccd-90a2-bb2c6db7c587'>Vir Biotechnology - DIRECTOR, BIOSTATISTICS</a></h5> 
+<h5><a href='https://jobs.lever.co/vir/db3fe4bb-4c9d-4ccd-90a2-bb2c6db7c587'>Vir Biotechnology - DIRECTOR, BIOSTATISTICS</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-09-20</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=oYrAafwT&__jvst=Employee+Referral&__jvsd=ssyfAhwB&__jvsc=Twitter&bid=n7HDJLwq'>Premier Research Careers - Senior Biostatistician</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=oYrAafwT&__jvst=Employee+Referral&__jvsd=ssyfAhwB&__jvsc=Twitter&bid=n7HDJLwq'>Premier Research Careers - Senior Biostatistician</a></h5> 
 <p><span class="badge badge-light">Praha 5, Czech Republic</span></p>
 <p>Posted on:: 2019-09-18</p>
 <hr/>
@@ -253,7 +253,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">Wokingham, United Kingdom</span></p>
 <p>Posted on: 2019-09-13</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/premier-research/job/oLrAafwG'>Premier Research Careers - Senior Biostatistician</a></h5> 
+<h5><a href='http://jobs.jobvite.com/premier-research/job/oLrAafwG'>Premier Research Careers - Senior Biostatistician</a></h5> 
 <p><span class="badge badge-light">Darmstadt, Germany</span></p>
 <p>Posted on: 2019-09-13</p>
 <hr/>
@@ -295,7 +295,7 @@ files, writing application programs within a statistical software, analyzing dat
 midline and endline quantitative data collection points. The primary outcomes of
 ?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Ergomed/743999691394798-biostatistician'>Ergomed Biostatistician | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Ergomed/743999691394798-biostatistician'>Ergomed Biostatistician | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">K?ln, Germany</span></p>
 <p>Posted on: 2019-09-06</p>
 <hr/>
@@ -343,7 +343,7 @@ midline and endline quantitative data collection points. The primary outcomes of
 <p><span class="badge badge-light">Cambridge, MA</span></p>
 <p>Posted on: 2019-09-04</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=oYrAafwT&__jvst=Employee+Referral&__jvsd=s8eovhw1&__jvsc=Twitter&bid=nNBctLwj'>Premier Research Careers - Senior Biostatistician</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=oYrAafwT&__jvst=Employee+Referral&__jvsd=s8eovhw1&__jvsc=Twitter&bid=nNBctLwj'>Premier Research Careers - Senior Biostatistician</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-09-01</p>
 <hr/>
@@ -371,7 +371,7 @@ midline and endline quantitative data collection points. The primary outcomes of
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/portola/job/ofFRafwF'>Portola Pharmaceuticals Careers - Director, Biostatistics, Oncology and Non-Cardiovascular Programs</a></h5> 
+<h5><a href='https://jobs.jobvite.com/portola/job/ofFRafwF'>Portola Pharmaceuticals Careers - Director, Biostatistics, Oncology and Non-Cardiovascular Programs</a></h5> 
 <p><span class="badge badge-light">South San Francisco, California</span></p>
 <p>Posted on: 2019-08-29</p>
 <hr/>
@@ -421,7 +421,7 @@ of the Biostatistics department in the R&D Development organisation.</p>
 <p>Aug 8, 2019 ... Serves as an independent reporting statistician on data monitoring committees. 
 Develops statistical analysis plans and reporting specifications for simple to?...</p>
 <hr/>
-<h5><a href='https://glpg.recruitee.com/o/biostatistics-leader-be-nl-fr-or-ch'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://glpg.recruitee.com/o/biostatistics-leader-be-nl-fr-or-ch'>
       Biostatistics Leader -  BE, NL, FR or CH - Galapagos
     </a></h5> 
 <p><span class="badge badge-light">France</span></p>
@@ -447,7 +447,7 @@ of focus, using the appropriate statistical and machine learning methodologies?.
 <p><span class="badge badge-light">South San Francisco, CA</span></p>
 <p>Posted on: 2019-08-09</p>
 <hr/>
-<h5><a href='https://stanford.referrals.selectminds.com/jobs/biostatistician-1-7648'>Biostatistician 1 - Stanford University Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://stanford.referrals.selectminds.com/jobs/biostatistician-1-7648'>Biostatistician 1 - Stanford University Careers</a></h5> 
 <p><span class="badge badge-light">Redwood City California, United States</span></p>
 <p>Posted on: 2019-08-09</p>
 <hr/>
@@ -488,7 +488,7 @@ States in a poll conducted by The Scientist magazine! Our Values: INTEGRITY?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-01</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/veristat/job/oJFDafwV'>Veristat Careers - Biostatistician</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/veristat/job/oJFDafwV'>Veristat Careers - Biostatistician</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-01</p>
 <hr/>
